Tarea 4 - Crear el marco de aplicación

--- a/quiz_express/views/index.ejs
+++ b/quiz_express/views/index.ejs
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<!-- Dejamos sólo la parte específica de la vista porque el resto está en layout.ejs -->
+
+<section>
+    <h1>Bienvenido a P7 - Quiz - Juan Manuel Hernández</h1>
+    <p>P7 - Quiz - Juan Manuel Hernández</p>
+</section>
