Tarea 5 - Crear los elementos MVC de la primitiva GET /credits

--- a/quiz_express/views/index.ejs
+++ b/quiz_express/views/index.ejs
@@ -1,6 +1,6 @@
 <!-- Dejamos sólo la parte específica de la vista porque el resto está en layout.ejs -->
 
 <section>
-    <h1>Bienvenido a P7 - Quiz - Juan Manuel Hernández</h1>
+    <h1>Bienvenido a P7 - Quiz - Index - Juan Manuel Hernández</h1>
     <p>P7 - Quiz - Juan Manuel Hernández</p>
 </section>
