Tarea 6 - Crear los elementos MVC de la primitiva GET /quizzes

--- a/quiz_express/views/layout.ejs
+++ b/quiz_express/views/layout.ejs
@@ -9,7 +9,7 @@
 <body>
     <div id="page">
         <header>
-            <h1>P7 - Quiz - Juan Manuel Hernández (Header)</h1>
+            <h1>P7 - Quiz - Juan Manuel Hernández</h1>
         </header>
 
         <nav>
@@ -21,7 +21,7 @@
         <%- body %>
 
             <footer>
-                <hr/> P7 - Quiz - Juan Manuel Hernández (Footer)
+                <hr/> P7 - Quiz - Juan Manuel Hernández
                 <hr/>
             </footer>
     </div>
